# fastapi_2024_template

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/api/: router.py
backend/api/example/: handler.py  router.py  schemas.py  service.py
backend/api/minio/: handler.py  router.py  schemas.py  service.py
backend/api/mongo/: handler.py  router.py  schemas.py
backend/api/permission/: handler.py  repository.py  router.py  schemas.py  service.py
backend/api/tests/: conftest.py
backend/api/tests/utils/: db_postgres.py  get_headers.py
backend/api/user/: handler.py  router.py  schemas.py  service.py
backend/common/: log.py  model.py
backend/common/exception/: errors.py
backend/common/response/: response_chema.py  response_code.py
backend/common/security/: auth_service.py  jwt.py
backend/core/: Readme.md  config.py  db.py  db_redis.py  minio_client.py  minio_client_v2.py  mongo_db.py  path_conf.py  register.py
backend/middleware/: access_middleware.py  auth_jwt_middleware.py
backend/models/: permission.py  user.py  user_permission.py
backend/task/: __init__.py  celery.py  conf.py
backend/task/api/v1/: handler.py  router.py
backend/task/celery_task/: tasks.py
backend/task/service/: task_service.py
backend/tests/: alembic.ini  conftest.py  pytest.ini
backend/tests/migrations/: env.py
backend/tests/unit/: test_jwt.py
backend/tests/utils/: db.py  logger_project.py
backend/utils/: serializer.py  timezone.py
docker/: .gitignore
(+8 files in other folders)
