[tool.poetry]
name = "fastapi-architecture-2024"
version = "0.1.0"
description = ""
authors = ["Ckala62rus <agr.akyla@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
msgspec = "^0.18.6"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
