[tool.poetry]
name = "fastapi-architecture-2024"
version = "0.1.0"
description = ""
authors = ["Ckala62rus <agr.akyla@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
msgspec = "^0.18.6"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
pytest = "^8.2.2"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
supervisor = "^4.2.5"
pymongo = {extras = ["srv"], version = "^4.8.0"}
websockets = "^12.0"
minio = "^7.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
